[gd_scene load_steps=2 format=3 uid="uid://daqnnfoj1hjbd"]

[ext_resource type="Script" path="res://Scripts/main_scene.gd" id="1_ke176"]

[node name="MainScene" type="Node"]
script = ExtResource("1_ke176")

[node name="HUD" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Demo" type="Label" parent="HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 32
text = "Health or velocity or whatever"

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 70.0
offset_top = 45.0
offset_right = 110.0
offset_bottom = 85.0

[node name="Load1" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 436.0
offset_top = 99.0
offset_right = 570.0
offset_bottom = 130.0
text = "Load 1: Balloons"

[node name="Load2" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 433.0
offset_top = 160.0
offset_right = 680.0
offset_bottom = 191.0
text = "Load 2: Balloons and Obstacles"

[node name="Load3" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 440.0
offset_top = 234.0
offset_right = 551.0
offset_bottom = 265.0
text = "Load 3: 1 vs 1"

[node name="Load4" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 366.0
offset_top = 292.0
offset_right = 622.0
offset_bottom = 323.0
text = "Load 4: NPC vs Stationary target"

[node name="Load5" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 428.0
offset_top = 376.0
offset_right = 585.0
offset_bottom = 407.0
text = "Load 5: Red vs Blue"

[node name="Main3D" type="Node3D" parent="."]

[connection signal="pressed" from="Menu/Load1" to="." method="_on_load_1_pressed"]
[connection signal="pressed" from="Menu/Load2" to="." method="_on_load_2_pressed"]
[connection signal="pressed" from="Menu/Load3" to="." method="_on_load_3_pressed"]
[connection signal="pressed" from="Menu/Load4" to="." method="_on_load_4_pressed"]
[connection signal="pressed" from="Menu/Load5" to="." method="_on_load_5_pressed"]
